--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,6 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <title>JAVA Blog</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
 <body>
-	<h1>Template JEE</h1>
+	<h1>JAVA Blog</h1>
 
 	<pre>
 	
@@ -9,6 +16,7 @@ README
 Comments:
 =========
 
+API de simulação de um BLOG para o exame especial da matéria de Backend JAVA da Pós em Desenvolvimento WEB Full Stack.
 
 
 Commands:
@@ -17,10 +25,6 @@ Commands:
 To run tests:  mvn test
 
 To start application:  mvn -Dmaven.test.skip=true wildfly:run
-
-
-Application Tests:	
-==================
 
 	
 	</pre>
